[project]
name = "stripy"
version = "0.11.0"
description = "Stripe Pydantic Models"
authors = [
    { name = "Isaac Sánchez", email = "isaac@elrincondelsanchez.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
